--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "banner_colour": "defaultcolor15",
     "level": 205,
     "bp_tier": 208,
-    "status": "🔥schokobanane-btw🔥",
+    "status": "❤️‍🔥انستا ve9.2🍯",
     "platform": "WIN",
     "debug": false,
     "friend_accept": true,
